--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@ body {
 </style>
   </head>
   <body>
-    <svg id="diagram" width="400" height="300" xmlns="http://www.w3.org/2000/svg">
-    </svg>
+
     <script src="diascript.js"></script>
+
+    <svg id="ex1" width="400" height="300" xmlns="http://www.w3.org/2000/svg">
+    </svg>
     <script>
-      var el = document.getElementById('diagram');
+      var el = document.getElementById('ex1');
       renderInto(el, 10, 10,
         new Vbox({ spacing: 10 },
           new Vbox({ stroke_width: 1, padding: 10 },
@@ -26,5 +28,24 @@ body {
             new Text({}, "world!"))
         ));
     </script>
+
+    <svg id="ex2" width="400" height="300" xmlns="http://www.w3.org/2000/svg">
+    </svg>
+    <script>
+      var el = document.getElementById('ex2');
+      renderInto(el, 10, 10,
+        new Hbox({ spacing: 10 },
+          new Vbox({ stroke_width: 1, padding: 10 },
+            new Text({}, "Hi,"),
+            new Text({}, "world!")),
+          new Vbox({ stroke_width: 1, padding: 10, width: 200 },
+            new Text({}, "Hello,"),
+            new Text({ font_weight: 'bold' }, "world!")),
+          new Vbox({ stroke_width: 1, padding: 10, height: 100 },
+            new Text({}, "Hello,"),
+            new Text({}, "world!"))
+        ));
+    </script>
+
   </body>
 </html>
