Implement diagram.shrinkWrap

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           vbox({ x: 160, y: 20, width: 80, height: 80, stroke: '#ccc', stroke_width: 2, stroke_dasharray: '4' }),
         ];
         const el = document.getElementById('ex0');
-        diagram(shapes).renderInto(el);
+        diagram(shapes).renderInto(el).shrinkWrap();
       </script>
     </div>
 
@@ -61,7 +61,7 @@
           ),
         ];
         const el = document.getElementById('ex1');
-        diagram(shapes).renderInto(el);
+        diagram(shapes).renderInto(el).shrinkWrap();
       </script>
     </div>
 
@@ -88,7 +88,7 @@
           ),
         ];
         const el = document.getElementById('ex2');
-        diagram(shapes).renderInto(el);
+        diagram(shapes).renderInto(el).shrinkWrap();
       </script>
     </div>
 
